--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
+
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <mainClass>org.example.Main</mainClass>
+                            </manifest>
+                        </archive>
+                    </configuration>
+
                 </plugin>
             </plugins>
         </pluginManagement>
